--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Научиться учиться</title>
-    <link rel="stylesheet" href="./styles/style.css" />
+    <!--Отлично: Вы подключили normalize.css -->
+    <!--Нужно исправить: У вас неверный порядок подключения файлов стилей. normalize.css должен быть подключен первым -->
     <link rel="stylesheet" href="./styles/normalize.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
     <div class="page">
@@ -30,25 +32,22 @@
             </h2>
 
             <div class="two-columns__main-text">
-              <p
-                class="two-columns__paragraph two-columns__paragraph_first-paragraph"
-              >
+              <!--Нужно исправить: Не используйте числительные в именах классов-->
+              <p class="two-columns__paragraph">
                 Ни в школе, ни в институте нас не учат тому, как правильно
                 изучать материал. Мы готовимся к экзаменам и учим билеты. Мы
                 тренируемся решать однообразные задачи, чтобы лучше сдать тест,
                 но часто в итоге это не дает нам реального знания. Зубрежка
                 быстро выветривается и не приносит пользы.
               </p>
-              <p
-                class="two-columns__paragraph two-columns__paragraph_second-paragraph"
-              >
+              <!--Нужно исправить: Не используйте числительные в именах классов-->
+              <p class="two-columns__paragraph">
                 <span class="two-columns__span-accent">Вывод:</span> учиться
                 тоже нужно уметь, но почему-то этому мало где учат. Что с этим
                 делать?
               </p>
-              <p
-                class="two-columns__paragraph two-columns__paragraph_third-paragraph"
-              >
+              <!--Нужно исправить: Не используйте числительные в именах классов-->
+              <p class="two-columns__paragraph">
                 Конкретные техники и упражнения помогают изменить подход к
                 обучению, сделать его эффективным и захватывающим. Эти же
                 техники применяются на примере обучения в Практикуме.
@@ -61,29 +60,29 @@
           <h2 class="section-title">Цифры и факты</h2>
           <p class="section-subtitle">Про учёбу и мозг</p>
           <div class="table">
-            <div class="table__cell table__cell_width_middle">
+            <div class="table__cell">
               <h3 class="table__heading">86 миллиардов</h3>
               <p class="table__text">Число нейронов в мозге человека</p>
             </div>
-            <div class="table__cell table__cell_width_middle">
+            <div class="table__cell">
               <h3 class="table__heading">2.1 миллиарда</h3>
               <p class="table__text">
                 Число нуждающихся в повышении квалификации
               </p>
               <p class="table__text">Всемирный Банк, 2017</p>
             </div>
-            <div class="table__cell table__cell_width_middle">
+            <div class="table__cell">
               <h3 class="table__heading">1000 терабайт</h3>
               <p class="table__text">Объём памяти человека</p>
             </div>
-            <div class="table__cell table__cell_width_middle">
+            <div class="table__cell">
               <h3 class="table__heading">500 триллионов</h3>
               <p class="table__text">
                 Число ответственных за обучение нервных синапсов у взрослого
                 человека
               </p>
             </div>
-            <div class="table__cell table__cell_width_middle">
+            <div class="table__cell">
               <h3 class="table__heading">420 миллионов</h3>
               <p class="table__text">
                 Число взрослых людей моложе 25 лет, не имеющих образования для
@@ -91,15 +90,15 @@
               </p>
               <p class="table__text">Всемирный Банк, 2017</p>
             </div>
-            <div class="table__cell table__cell_width_middle">
+            <div class="table__cell">
               <h3 class="table__heading">17–20 лет</h3>
               <p class="table__text">Пик обучаемости</p>
             </div>
-            <div class="table__cell table__cell_width_middle">
+            <div class="table__cell">
               <h3 class="table__heading">1885 год</h3>
               <p class="table__text">Открытие кривой забывания</p>
             </div>
-            <div class="table__cell table__cell_width_middle">
+            <div class="table__cell">
               <h3 class="table__heading">1889 год</h3>
               <p class="table__text">Открытие условного рефлекса</p>
             </div>
@@ -110,7 +109,6 @@
           <h2 class="feinman__title">Метод Фейнмана</h2>
           <p class="feinman__subtitle">Выучить и не забыть</p>
           <a class="feinman__link" href="#">Подробнее &rarr;</a>
-          <div class="feinmann__main-illustration"></div>
         </section>
 
         <section class="kaufman">
@@ -121,90 +119,70 @@
             от Джоша Кауфмана
           </p>
           <div class="table table_theme_dark">
-            <div
-              class="table__cell table__cell_width_small table__cell_theme_dark"
-            >
+            <div class="table__cell table__cell_theme_dark">
               <h3 class="table__heading table__heading_theme_dark">1</h3>
               <p class="table__text table__text_theme_dark">
                 Выберите привлекательный проект
               </p>
             </div>
 
-            <div
-              class="table__cell table__cell_width_small table__cell_theme_dark"
-            >
+            <div class="table__cell table__cell_theme_dark">
               <h3 class="table__heading table__heading_theme_dark">2</h3>
               <p class="table__text table__text_theme_dark">
                 Сосредоточьтесь на каком-то одном навыке.
               </p>
             </div>
 
-            <div
-              class="table__cell table__cell_width_small table__cell_theme_dark"
-            >
+            <div class="table__cell table__cell_theme_dark">
               <h3 class="table__heading table__heading_theme_dark">3</h3>
               <p class="table__text table__text_theme_dark">
                 Определите целевой уровень мастерства.
               </p>
             </div>
 
-            <div
-              class="table__cell table__cell_width_small table__cell_theme_dark"
-            >
+            <div class="table__cell table__cell_theme_dark">
               <h3 class="table__heading table__heading_theme_dark">4</h3>
               <p class="table__text table__text_theme_dark">
                 Разбейте навык на элементы.
               </p>
             </div>
 
-            <div
-              class="table__cell table__cell_width_small table__cell_theme_dark"
-            >
+            <div class="table__cell table__cell_theme_dark">
               <h3 class="table__heading table__heading_theme_dark">5</h3>
               <p class="table__text table__text_theme_dark">
                 Приготовьте всё необходимое для занятий.
               </p>
             </div>
 
-            <div
-              class="table__cell table__cell_width_small table__cell_theme_dark"
-            >
+            <div class="table__cell table__cell_theme_dark">
               <h3 class="table__heading table__heading_theme_dark">6</h3>
               <p class="table__text table__text_theme_dark">
                 Устраните препятствия для занятий.
               </p>
             </div>
 
-            <div
-              class="table__cell table__cell_width_small table__cell_theme_dark"
-            >
+            <div class="table__cell table__cell_theme_dark">
               <h3 class="table__heading table__heading_theme_dark">7</h3>
               <p class="table__text table__text_theme_dark">
                 Выделите специальное время для занятий.
               </p>
             </div>
 
-            <div
-              class="table__cell table__cell_width_small table__cell_theme_dark"
-            >
+            <div class="table__cell table__cell_theme_dark">
               <h3 class="table__heading table__heading_theme_dark">8</h3>
               <p class="table__text table__text_theme_dark">
                 Создайте быстрые петли обратной связи.
               </p>
             </div>
 
-            <div
-              class="table__cell table__cell_width_small table__cell_theme_dark"
-            >
+            <div class="table__cell table__cell_theme_dark">
               <h3 class="table__heading table__heading_theme_dark">9</h3>
               <p class="table__text table__text_theme_dark">
                 Занимайтесь по расписанию, короткими интенсивными интервалами.
               </p>
             </div>
 
-            <div
-              class="table__cell table__cell_width_small table__cell_theme_dark"
-            >
+            <div class="table__cell table__cell_theme_dark">
               <h3 class="table__heading table__heading_theme_dark">10</h3>
               <p class="table__text table__text_theme_dark">
                 Уделяйте внимание количеству и скорости.
@@ -219,47 +197,105 @@
         <div class="footer__columns">
           <div class="footer__column footer__column_content_copyright">
             <div class="logo logo_place_footer"></div>
-            <div class="footer__author">&copy; 2020. Стас Стаховский</div>
+            <p class="footer__author">© 2020. Стас Стаховский</p>
           </div>
           <div class="footer__column footer__column_content_info">
             <h3 class="footer__column-heading">О практикуме</h3>
-            <div class="footer__column-links">
-              <a class="footer__link" href="#">Главная</a>
-              <a class="footer__link" href="#">Концепция</a>
-              <a class="footer__link" href="#">Наставники</a>
-            </div>
+            <ul class="footer__column-links">
+              <li><a class="footer__link" href="#">Главная</a></li>
+              <li><a class="footer__link" href="#">Концепция</a></li>
+              <li><a class="footer__link" href="#">Наставники</a></li>
+            </ul>
           </div>
           <div class="footer__column footer__column_content_social">
             <h3 class="footer__column-heading">Соцсети</h3>
-            <div class="footer__column-links">
-              <a class="footer__link" href="#">
-                <img
-                  class="footer__social-icons"
-                  src="./images/facebook_white.svg"
-                  alt="Facebook"
-                />
-                Facebook
-              </a>
-              <a class="footer__link" href="#"
-                ><img
-                  class="footer__social-icons"
-                  src="./images/vk_white.svg"
-                  alt="Вконтакте"
-                />
-                Вконтакте</a
-              >
-              <a class="footer__link" href="#"
-                ><img
-                  class="footer__social-icons"
-                  src="./images/instagram_white.svg"
-                  alt="Instagram"
-                />
-                Instagram
-              </a>
-            </div>
+            <ul class="footer__column-links">
+              <li>
+                <a class="footer__link" href="#">
+                  <img
+                    class="footer__social-icons"
+                    src="./images/facebook_white.svg"
+                    alt="Facebook"
+                  />
+                  Facebook
+                </a>
+              </li>
+              <li>
+                <a class="footer__link" href="#">
+                  <img
+                    class="footer__social-icons"
+                    src="./images/vk_white.svg"
+                    alt="Вконтакте"
+                  />
+                  Вконтакте
+                </a>
+              </li>
+              <li>
+                <a class="footer__link" href="#">
+                  <img
+                    class="footer__social-icons"
+                    src="./images/instagram_white.svg"
+                    alt="Instagram"
+                  />
+                  Instagram
+                </a>
+              </li>
+            </ul>
           </div>
         </div>
       </footer>
     </div>
   </body>
 </html>
+
+<!--
+  Вопрос ревьюеру:
+
+    Пока ждал ревью, читал про файловую структуру. Нужно ли переделывать CSS на данном спринте
+    под структуру БЭМ, или это все будет в следующих спринтах?
+
+-->
+
+<!--
+
+  Отлично:
+
+
+    Вы используете правильные относительные пути к изображениям
+    У всех картинок есть атрибут alt
+    Вы правильно размечаете заголовки
+    У вас верно подключены файлы стилей
+    Вы не фиксируете высоту текстового контента
+    Верстка соответствует брифу
+
+  Нужно исправить:
+
+
+    1. Однотипные повторяющиеся элементы (навигация; теги, которые воспринимаются перечислением) нужно реализовывать списком - http://htmlbook.ru/html/ul
+    2. Не используйте дополнительные классы в two-columns__paragraph, которые задают отступы.
+      Если завтра вам скажут поменять параграфы местами или добавить еще 10 новых, вам придется переписывать свои классы, поэтому
+      должен остаться только two-columns__paragraph, задайте ему такие стили, чтобы попадать в макет не важно в каком порядке
+      находятся блоки
+    3. Не используйте числительные в именах классах. Вы должны стремиться сделать универсальные классы
+   В реальном проекте вас могут попросить через некоторое время добавить еще 10 новых элементов или изменить порядок текущих, если
+   вы не используете универсальные имена классов, то вам придется каждый раз менять порядок числительных
+    4. Текстовый контент должен быть в теге p или h. У вас встречается текст внутри div, просмотрите весь проект и поправьте
+    5. Не добавляйте собственные дополнительные классы. На первых спринтах вы должны следовать брифу, например table__cell_width_small
+    6. two-columns__paragraph - делайте отступ только вниз, сейчас у каждого блока отступ и снизу и сверху.
+    7. feinman__link - недоступна для нажатия
+    8. kaufman - не задавайте отрицательный z-index у крупных блоков, это делает контент недоступным
+
+  Можно лучше:
+
+    1. feinmann__main-illustration - сделайте фоном родительского блока
+
+
+  Всегда используйте валидатор для самопроверки верстки https://validator.w3.org/nu/#textarea .
+  Он поможет отловить большинство ошибок.
+
+  Не удаляйте, пожалуйста, мои комментарии до принятия работы.
+
+  Напоминаю вам, что работа принимается только после исправления всех замечаний с пометкой "Нужно исправить", пометки
+  "Можно лучше" также желательны к исправлению для вашего развития, однако, с ними работа будет принята.
+
+-->
